@@ -9,7 +9,8 @@
     - Fix get_server_time for Oracle. # RT #58049
     - Support Data::ObjectDriver->get_dbh. RT #50022
     - Use sort by jobid on selects. RT #34843
-    - Added floor method to limit priortity job selection. RT #50842
+    - Added floor methods to limit priortity job selection. RT #50842
+    - Add batch_size methods to expose FIND_JOB_BATCH_SIZE. RT #72815
 
 1.10 (2010-03-15)
     - Add $job->declined method for workers to be able to decline handling
